--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   percent_indicator: ^1.0.16
+  dynamic_theme: ^1.0.0
 
 dev_dependencies:
   flutter_test:
