--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   percent_indicator: ^1.0.16
   dynamic_theme: ^1.0.0
+  scoped_model: ^1.0.1
 
 dev_dependencies:
   flutter_test:
