--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dynamic_theme: ^1.0.0
   scoped_model: ^1.0.1
   http: ^0.12.0+2
+  url_launcher: ^3.0.1
 
 dev_dependencies:
   flutter_test:
